// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@xstate/graph getPathFromEvents() should return a path to the last entered state by the event sequence: path from events 1`] = `
Object {
  "state": Object {
    "red": "flashing",
  },
  "steps": Array [
    Object {
      "state": "green",
      "type": "TIMER",
    },
    Object {
      "state": "yellow",
      "type": "TIMER",
    },
    Object {
      "state": Object {
        "red": "walk",
      },
      "type": "TIMER",
    },
    Object {
      "state": "green",
      "type": "POWER_OUTAGE",
    },
  ],
}
`;

exports[`@xstate/graph getShortestPaths() should represent conditional paths based on context: shortest paths conditional 1`] = `
Object {
  "\\"bar\\" | {\\"id\\":\\"foo\\"}": Array [
    Object {
      "state": "bar",
      "steps": Array [
        Object {
          "state": "pending",
          "type": "EVENT",
        },
      ],
    },
  ],
  "\\"foo\\" | {\\"id\\":\\"foo\\"}": Array [
    Object {
      "state": "foo",
      "steps": Array [
        Object {
          "state": "pending",
          "type": "STATE",
        },
      ],
    },
  ],
  "\\"pending\\" | {\\"id\\":\\"foo\\"}": Array [
    Object {
      "state": "pending",
      "steps": Array [],
    },
  ],
}
`;

exports[`@xstate/graph getShortestPaths() should return a mapping of shortest paths to all states (parallel): shortest paths parallel 1`] = `
Object {
  "{\\"a\\":\\"a1\\",\\"b\\":\\"b1\\"}": Array [
    Object {
      "state": Object {
        "a": "a1",
        "b": "b1",
      },
      "steps": Array [],
    },
  ],
  "{\\"a\\":\\"a2\\",\\"b\\":\\"b2\\"}": Array [
    Object {
      "state": Object {
        "a": "a2",
        "b": "b2",
      },
      "steps": Array [
        Object {
          "state": Object {
            "a": "a1",
            "b": "b1",
          },
          "type": "2",
        },
      ],
    },
  ],
  "{\\"a\\":\\"a3\\",\\"b\\":\\"b3\\"}": Array [
    Object {
      "state": Object {
        "a": "a3",
        "b": "b3",
      },
      "steps": Array [
        Object {
          "state": Object {
            "a": "a1",
            "b": "b1",
          },
          "type": "3",
        },
      ],
    },
  ],
}
`;

exports[`@xstate/graph getShortestPaths() should return a mapping of shortest paths to all states: shortest paths 1`] = `
Object {
  "\\"green\\"": Array [
    Object {
      "state": "green",
      "steps": Array [],
    },
  ],
  "\\"yellow\\"": Array [
    Object {
      "state": "yellow",
      "steps": Array [
        Object {
          "state": "green",
          "type": "TIMER",
        },
      ],
    },
  ],
  "{\\"red\\":\\"flashing\\"}": Array [
    Object {
      "state": Object {
        "red": "flashing",
      },
      "steps": Array [
        Object {
          "state": "green",
          "type": "POWER_OUTAGE",
        },
      ],
    },
  ],
  "{\\"red\\":\\"stop\\"}": Array [
    Object {
      "state": Object {
        "red": "stop",
      },
      "steps": Array [
        Object {
          "state": "green",
          "type": "TIMER",
        },
        Object {
          "state": "yellow",
          "type": "TIMER",
        },
        Object {
          "state": Object {
            "red": "walk",
          },
          "type": "PED_COUNTDOWN",
        },
        Object {
          "state": Object {
            "red": "wait",
          },
          "type": "PED_COUNTDOWN",
        },
      ],
    },
  ],
  "{\\"red\\":\\"wait\\"}": Array [
    Object {
      "state": Object {
        "red": "wait",
      },
      "steps": Array [
        Object {
          "state": "green",
          "type": "TIMER",
        },
        Object {
          "state": "yellow",
          "type": "TIMER",
        },
        Object {
          "state": Object {
            "red": "walk",
          },
          "type": "PED_COUNTDOWN",
        },
      ],
    },
  ],
  "{\\"red\\":\\"walk\\"}": Array [
    Object {
      "state": Object {
        "red": "walk",
      },
      "steps": Array [
        Object {
          "state": "green",
          "type": "TIMER",
        },
        Object {
          "state": "yellow",
          "type": "TIMER",
        },
      ],
    },
  ],
}
`;

exports[`@xstate/graph getSimplePaths() should return a mapping of arrays of simple paths to all states 2`] = `
Object {
  "\\"green\\"": Array [
    Object {
      "state": "green",
      "steps": Array [],
    },
  ],
  "\\"yellow\\"": Array [
    Object {
      "state": "yellow",
      "steps": Array [
        Object {
          "state": "green",
          "type": "TIMER",
        },
      ],
    },
  ],
  "{\\"red\\":\\"flashing\\"}": Array [
    Object {
      "state": Object {
        "red": "flashing",
      },
      "steps": Array [
        Object {
          "state": "green",
          "type": "TIMER",
        },
        Object {
          "state": "yellow",
          "type": "TIMER",
        },
        Object {
          "state": Object {
            "red": "walk",
          },
          "type": "POWER_OUTAGE",
        },
      ],
    },
    Object {
      "state": Object {
        "red": "flashing",
      },
      "steps": Array [
        Object {
          "state": "green",
          "type": "TIMER",
        },
        Object {
          "state": "yellow",
          "type": "TIMER",
        },
        Object {
          "state": Object {
            "red": "walk",
          },
          "type": "PED_COUNTDOWN",
        },
        Object {
          "state": Object {
            "red": "wait",
          },
          "type": "POWER_OUTAGE",
        },
      ],
    },
    Object {
      "state": Object {
        "red": "flashing",
      },
      "steps": Array [
        Object {
          "state": "green",
          "type": "TIMER",
        },
        Object {
          "state": "yellow",
          "type": "TIMER",
        },
        Object {
          "state": Object {
            "red": "walk",
          },
          "type": "PED_COUNTDOWN",
        },
        Object {
          "state": Object {
            "red": "wait",
          },
          "type": "PED_COUNTDOWN",
        },
        Object {
          "state": Object {
            "red": "stop",
          },
          "type": "POWER_OUTAGE",
        },
      ],
    },
    Object {
      "state": Object {
        "red": "flashing",
      },
      "steps": Array [
        Object {
          "state": "green",
          "type": "TIMER",
        },
        Object {
          "state": "yellow",
          "type": "POWER_OUTAGE",
        },
      ],
    },
    Object {
      "state": Object {
        "red": "flashing",
      },
      "steps": Array [
        Object {
          "state": "green",
          "type": "POWER_OUTAGE",
        },
      ],
    },
  ],
  "{\\"red\\":\\"stop\\"}": Array [
    Object {
      "state": Object {
        "red": "stop",
      },
      "steps": Array [
        Object {
          "state": "green",
          "type": "TIMER",
        },
        Object {
          "state": "yellow",
          "type": "TIMER",
        },
        Object {
          "state": Object {
            "red": "walk",
          },
          "type": "PED_COUNTDOWN",
        },
        Object {
          "state": Object {
            "red": "wait",
          },
          "type": "PED_COUNTDOWN",
        },
      ],
    },
  ],
  "{\\"red\\":\\"wait\\"}": Array [
    Object {
      "state": Object {
        "red": "wait",
      },
      "steps": Array [
        Object {
          "state": "green",
          "type": "TIMER",
        },
        Object {
          "state": "yellow",
          "type": "TIMER",
        },
        Object {
          "state": Object {
            "red": "walk",
          },
          "type": "PED_COUNTDOWN",
        },
      ],
    },
  ],
  "{\\"red\\":\\"walk\\"}": Array [
    Object {
      "state": Object {
        "red": "walk",
      },
      "steps": Array [
        Object {
          "state": "green",
          "type": "TIMER",
        },
        Object {
          "state": "yellow",
          "type": "TIMER",
        },
      ],
    },
  ],
}
`;

exports[`@xstate/graph getSimplePaths() should return a mapping of simple paths to all states (parallel): simple paths parallel 1`] = `
Object {
  "{\\"a\\":\\"a1\\",\\"b\\":\\"b1\\"}": Array [
    Object {
      "state": Object {
        "a": "a1",
        "b": "b1",
      },
      "steps": Array [],
    },
  ],
  "{\\"a\\":\\"a2\\",\\"b\\":\\"b2\\"}": Array [
    Object {
      "state": Object {
        "a": "a2",
        "b": "b2",
      },
      "steps": Array [
        Object {
          "state": Object {
            "a": "a1",
            "b": "b1",
          },
          "type": "2",
        },
      ],
    },
  ],
  "{\\"a\\":\\"a3\\",\\"b\\":\\"b3\\"}": Array [
    Object {
      "state": Object {
        "a": "a3",
        "b": "b3",
      },
      "steps": Array [
        Object {
          "state": Object {
            "a": "a1",
            "b": "b1",
          },
          "type": "2",
        },
        Object {
          "state": Object {
            "a": "a2",
            "b": "b2",
          },
          "type": "3",
        },
      ],
    },
    Object {
      "state": Object {
        "a": "a3",
        "b": "b3",
      },
      "steps": Array [
        Object {
          "state": Object {
            "a": "a1",
            "b": "b1",
          },
          "type": "3",
        },
      ],
    },
  ],
}
`;

exports[`@xstate/graph getSimplePaths() should return multiple paths for equivalent transitions: simple paths equal transitions 1`] = `
Object {
  "\\"a\\"": Array [
    Object {
      "state": "a",
      "steps": Array [],
    },
  ],
  "\\"b\\"": Array [
    Object {
      "state": "b",
      "steps": Array [
        Object {
          "state": "a",
          "type": "FOO",
        },
      ],
    },
    Object {
      "state": "b",
      "steps": Array [
        Object {
          "state": "a",
          "type": "BAR",
        },
      ],
    },
  ],
}
`;

exports[`@xstate/graph getSimplePaths() should return value-based paths: simple paths context 1`] = `
Object {
  "\\"finish\\" | {\\"count\\":3}": Array [
    Object {
      "state": "finish",
      "steps": Array [
        Object {
          "state": "start",
          "type": "INC",
        },
        Object {
          "state": "start",
          "type": "INC",
        },
        Object {
          "state": "start",
          "type": "INC",
        },
      ],
    },
  ],
  "\\"start\\" | {\\"count\\":0}": Array [
    Object {
      "state": "start",
      "steps": Array [],
    },
  ],
  "\\"start\\" | {\\"count\\":1}": Array [
    Object {
      "state": "start",
      "steps": Array [
        Object {
          "state": "start",
          "type": "INC",
        },
      ],
    },
  ],
  "\\"start\\" | {\\"count\\":2}": Array [
    Object {
      "state": "start",
      "steps": Array [
        Object {
          "state": "start",
          "type": "INC",
        },
        Object {
          "state": "start",
          "type": "INC",
        },
      ],
    },
  ],
}
`;

exports[`@xstate/graph getSimplePathsAsArray() should return an array of shortest paths to all states: simple paths array 1`] = `
Array [
  Object {
    "paths": Array [
      Object {
        "state": Object {
          "_event": Object {
            "$$type": "scxml",
            "data": Object {
              "type": "xstate.init",
            },
            "name": "xstate.init",
            "type": "external",
          },
          "_sessionid": null,
          "actions": Array [],
          "activities": Object {},
          "changed": undefined,
          "children": Object {},
          "context": undefined,
          "done": false,
          "event": Object {
            "type": "xstate.init",
          },
          "events": Array [],
          "historyValue": undefined,
          "matches": [Function],
          "meta": Object {},
          "tags": Array [],
          "toStrings": [Function],
          "value": "green",
        },
        "steps": Array [],
        "weight": 0,
      },
    ],
    "state": Object {
      "_event": Object {
        "$$type": "scxml",
        "data": Object {
          "type": "xstate.init",
        },
        "name": "xstate.init",
        "type": "external",
      },
      "_sessionid": null,
      "actions": Array [],
      "activities": Object {},
      "changed": undefined,
      "children": Object {},
      "context": undefined,
      "done": false,
      "event": Object {
        "type": "xstate.init",
      },
      "events": Array [],
      "historyValue": undefined,
      "matches": [Function],
      "meta": Object {},
      "tags": Array [],
      "toStrings": [Function],
      "value": "green",
    },
  },
  Object {
    "paths": Array [
      Object {
        "state": Object {
          "_event": Object {
            "$$type": "scxml",
            "data": Object {
              "type": "TIMER",
            },
            "name": "TIMER",
            "type": "external",
          },
          "_sessionid": null,
          "actions": Array [],
          "activities": Object {},
          "changed": true,
          "children": Object {},
          "context": undefined,
          "done": false,
          "event": Object {
            "type": "TIMER",
          },
          "events": Array [],
          "historyValue": Object {
            "current": "yellow",
            "states": Object {
              "green": undefined,
              "red": Object {
                "current": "walk",
                "states": Object {
                  "flashing": undefined,
                  "stop": undefined,
                  "wait": undefined,
                  "walk": undefined,
                },
              },
              "yellow": undefined,
            },
          },
          "matches": [Function],
          "meta": Object {},
          "tags": Array [],
          "toStrings": [Function],
          "value": "yellow",
        },
        "steps": Array [
          Object {
            "event": Object {
              "type": "TIMER",
            },
            "state": Object {
              "_event": Object {
                "$$type": "scxml",
                "data": Object {
                  "type": "xstate.init",
                },
                "name": "xstate.init",
                "type": "external",
              },
              "_sessionid": null,
              "actions": Array [],
              "activities": Object {},
              "changed": undefined,
              "children": Object {},
              "context": undefined,
              "done": false,
              "event": Object {
                "type": "xstate.init",
              },
              "events": Array [],
              "historyValue": undefined,
              "matches": [Function],
              "meta": Object {},
              "tags": Array [],
              "toStrings": [Function],
              "value": "green",
            },
          },
        ],
        "weight": 1,
      },
    ],
    "state": Object {
      "_event": Object {
        "$$type": "scxml",
        "data": Object {
          "type": "TIMER",
        },
        "name": "TIMER",
        "type": "external",
      },
      "_sessionid": null,
      "actions": Array [],
      "activities": Object {},
      "changed": true,
      "children": Object {},
      "context": undefined,
      "done": false,
      "event": Object {
        "type": "TIMER",
      },
      "events": Array [],
      "historyValue": Object {
        "current": "yellow",
        "states": Object {
          "green": undefined,
          "red": Object {
            "current": "walk",
            "states": Object {
              "flashing": undefined,
              "stop": undefined,
              "wait": undefined,
              "walk": undefined,
            },
          },
          "yellow": undefined,
        },
      },
      "matches": [Function],
      "meta": Object {},
      "tags": Array [],
      "toStrings": [Function],
      "value": "yellow",
    },
  },
  Object {
    "paths": Array [
      Object {
        "state": Object {
          "_event": Object {
            "$$type": "scxml",
            "data": Object {
              "type": "TIMER",
            },
            "name": "TIMER",
            "type": "external",
          },
          "_sessionid": null,
          "actions": Array [],
          "activities": Object {},
          "changed": true,
          "children": Object {},
          "context": undefined,
          "done": false,
          "event": Object {
            "type": "TIMER",
          },
          "events": Array [],
          "historyValue": Object {
            "current": Object {
              "red": "walk",
            },
            "states": Object {
              "green": undefined,
              "red": Object {
                "current": "walk",
                "states": Object {
                  "flashing": undefined,
                  "stop": undefined,
                  "wait": undefined,
                  "walk": undefined,
                },
              },
              "yellow": undefined,
            },
          },
          "matches": [Function],
          "meta": Object {},
          "tags": Array [],
          "toStrings": [Function],
          "value": Object {
            "red": "walk",
          },
        },
        "steps": Array [
          Object {
            "event": Object {
              "type": "TIMER",
            },
            "state": Object {
              "_event": Object {
                "$$type": "scxml",
                "data": Object {
                  "type": "PED_COUNTDOWN",
                },
                "name": "PED_COUNTDOWN",
                "type": "external",
              },
              "_sessionid": null,
              "actions": Array [],
              "activities": Object {},
              "changed": false,
              "children": Object {},
              "context": undefined,
              "done": false,
              "event": Object {
                "type": "PED_COUNTDOWN",
              },
              "events": Array [],
              "history": Object {
                "_event": Object {
                  "$$type": "scxml",
                  "data": Object {
                    "type": "xstate.init",
                  },
                  "name": "xstate.init",
                  "type": "external",
                },
                "_sessionid": null,
                "actions": Array [],
                "activities": Object {},
                "changed": undefined,
                "children": Object {},
                "context": undefined,
                "done": false,
                "event": Object {
                  "type": "xstate.init",
                },
                "events": Array [],
                "historyValue": undefined,
                "matches": [Function],
                "meta": Object {},
                "tags": Array [],
                "toStrings": [Function],
                "value": "green",
              },
              "historyValue": undefined,
              "matches": [Function],
              "meta": Object {},
              "tags": Array [],
              "toStrings": [Function],
              "value": "green",
            },
          },
          Object {
            "event": Object {
              "type": "TIMER",
            },
            "state": Object {
              "_event": Object {
                "$$type": "scxml",
                "data": Object {
                  "type": "TIMER",
                },
                "name": "TIMER",
                "type": "external",
              },
              "_sessionid": null,
              "actions": Array [],
              "activities": Object {},
              "changed": true,
              "children": Object {},
              "context": undefined,
              "done": false,
              "event": Object {
                "type": "TIMER",
              },
              "events": Array [],
              "historyValue": Object {
                "current": "yellow",
                "states": Object {
                  "green": undefined,
                  "red": Object {
                    "current": "walk",
                    "states": Object {
                      "flashing": undefined,
                      "stop": undefined,
                      "wait": undefined,
                      "walk": undefined,
                    },
                  },
                  "yellow": undefined,
                },
              },
              "matches": [Function],
              "meta": Object {},
              "tags": Array [],
              "toStrings": [Function],
              "value": "yellow",
            },
          },
        ],
        "weight": 2,
      },
    ],
    "state": Object {
      "_event": Object {
        "$$type": "scxml",
        "data": Object {
          "type": "TIMER",
        },
        "name": "TIMER",
        "type": "external",
      },
      "_sessionid": null,
      "actions": Array [],
      "activities": Object {},
      "changed": true,
      "children": Object {},
      "context": undefined,
      "done": false,
      "event": Object {
        "type": "TIMER",
      },
      "events": Array [],
      "historyValue": Object {
        "current": Object {
          "red": "walk",
        },
        "states": Object {
          "green": undefined,
          "red": Object {
            "current": "walk",
            "states": Object {
              "flashing": undefined,
              "stop": undefined,
              "wait": undefined,
              "walk": undefined,
            },
          },
          "yellow": undefined,
        },
      },
      "matches": [Function],
      "meta": Object {},
      "tags": Array [],
      "toStrings": [Function],
      "value": Object {
        "red": "walk",
      },
    },
  },
  Object {
    "paths": Array [
      Object {
        "state": Object {
          "_event": Object {
            "$$type": "scxml",
            "data": Object {
              "type": "POWER_OUTAGE",
            },
            "name": "POWER_OUTAGE",
            "type": "external",
          },
          "_sessionid": null,
          "actions": Array [],
          "activities": Object {},
          "changed": true,
          "children": Object {},
          "context": undefined,
          "done": false,
          "event": Object {
            "type": "POWER_OUTAGE",
          },
          "events": Array [],
          "historyValue": Object {
            "current": Object {
              "red": "flashing",
            },
            "states": Object {
              "green": undefined,
              "red": Object {
                "current": "flashing",
                "states": Object {
                  "flashing": undefined,
                  "stop": undefined,
                  "wait": undefined,
                  "walk": undefined,
                },
              },
              "yellow": undefined,
            },
          },
          "matches": [Function],
          "meta": Object {},
          "tags": Array [],
          "toStrings": [Function],
          "value": Object {
            "red": "flashing",
          },
        },
        "steps": Array [
          Object {
            "event": Object {
              "type": "TIMER",
            },
            "state": Object {
              "_event": Object {
                "$$type": "scxml",
                "data": Object {
                  "type": "PED_COUNTDOWN",
                },
                "name": "PED_COUNTDOWN",
                "type": "external",
              },
              "_sessionid": null,
              "actions": Array [],
              "activities": Object {},
              "changed": false,
              "children": Object {},
              "context": undefined,
              "done": false,
              "event": Object {
                "type": "PED_COUNTDOWN",
              },
              "events": Array [],
              "history": Object {
                "_event": Object {
                  "$$type": "scxml",
                  "data": Object {
                    "type": "xstate.init",
                  },
                  "name": "xstate.init",
                  "type": "external",
                },
                "_sessionid": null,
                "actions": Array [],
                "activities": Object {},
                "changed": undefined,
                "children": Object {},
                "context": undefined,
                "done": false,
                "event": Object {
                  "type": "xstate.init",
                },
                "events": Array [],
                "historyValue": undefined,
                "matches": [Function],
                "meta": Object {},
                "tags": Array [],
                "toStrings": [Function],
                "value": "green",
              },
              "historyValue": undefined,
              "matches": [Function],
              "meta": Object {},
              "tags": Array [],
              "toStrings": [Function],
              "value": "green",
            },
          },
          Object {
            "event": Object {
              "type": "TIMER",
            },
            "state": Object {
              "_event": Object {
                "$$type": "scxml",
                "data": Object {
                  "type": "TIMER",
                },
                "name": "TIMER",
                "type": "external",
              },
              "_sessionid": null,
              "actions": Array [],
              "activities": Object {},
              "changed": true,
              "children": Object {},
              "context": undefined,
              "done": false,
              "event": Object {
                "type": "TIMER",
              },
              "events": Array [],
              "historyValue": Object {
                "current": "yellow",
                "states": Object {
                  "green": undefined,
                  "red": Object {
                    "current": "walk",
                    "states": Object {
                      "flashing": undefined,
                      "stop": undefined,
                      "wait": undefined,
                      "walk": undefined,
                    },
                  },
                  "yellow": undefined,
                },
              },
              "matches": [Function],
              "meta": Object {},
              "tags": Array [],
              "toStrings": [Function],
              "value": "yellow",
            },
          },
          Object {
            "event": Object {
              "type": "POWER_OUTAGE",
            },
            "state": Object {
              "_event": Object {
                "$$type": "scxml",
                "data": Object {
                  "type": "TIMER",
                },
                "name": "TIMER",
                "type": "external",
              },
              "_sessionid": null,
              "actions": Array [],
              "activities": Object {},
              "changed": true,
              "children": Object {},
              "context": undefined,
              "done": false,
              "event": Object {
                "type": "TIMER",
              },
              "events": Array [],
              "historyValue": Object {
                "current": Object {
                  "red": "walk",
                },
                "states": Object {
                  "green": undefined,
                  "red": Object {
                    "current": "walk",
                    "states": Object {
                      "flashing": undefined,
                      "stop": undefined,
                      "wait": undefined,
                      "walk": undefined,
                    },
                  },
                  "yellow": undefined,
                },
              },
              "matches": [Function],
              "meta": Object {},
              "tags": Array [],
              "toStrings": [Function],
              "value": Object {
                "red": "walk",
              },
            },
          },
        ],
        "weight": 3,
      },
      Object {
        "state": Object {
          "_event": Object {
            "$$type": "scxml",
            "data": Object {
              "type": "POWER_OUTAGE",
            },
            "name": "POWER_OUTAGE",
            "type": "external",
          },
          "_sessionid": null,
          "actions": Array [],
          "activities": Object {},
          "changed": true,
          "children": Object {},
          "context": undefined,
          "done": false,
          "event": Object {
            "type": "POWER_OUTAGE",
          },
          "events": Array [],
          "history": Object {
            "_event": Object {
              "$$type": "scxml",
              "data": Object {
                "type": "PED_COUNTDOWN",
              },
              "name": "PED_COUNTDOWN",
              "type": "external",
            },
            "_sessionid": null,
            "actions": Array [
              Object {
                "exec": undefined,
                "type": "startCountdown",
              },
            ],
            "activities": Object {},
            "changed": true,
            "children": Object {},
            "context": undefined,
            "done": false,
            "event": Object {
              "type": "PED_COUNTDOWN",
            },
            "events": Array [],
            "historyValue": Object {
              "current": Object {
                "red": "wait",
              },
              "states": Object {
                "green": undefined,
                "red": Object {
                  "current": "wait",
                  "states": Object {
                    "flashing": undefined,
                    "stop": undefined,
                    "wait": undefined,
                    "walk": undefined,
                  },
                },
                "yellow": undefined,
              },
            },
            "matches": [Function],
            "meta": Object {},
            "tags": Array [],
            "toStrings": [Function],
            "value": Object {
              "red": "wait",
            },
          },
          "historyValue": Object {
            "current": Object {
              "red": "flashing",
            },
            "states": Object {
              "green": undefined,
              "red": Object {
                "current": "flashing",
                "states": Object {
                  "flashing": undefined,
                  "stop": undefined,
                  "wait": undefined,
                  "walk": undefined,
                },
              },
              "yellow": undefined,
            },
          },
          "matches": [Function],
          "meta": Object {},
          "tags": Array [],
          "toStrings": [Function],
          "value": Object {
            "red": "flashing",
          },
        },
        "steps": Array [
          Object {
            "event": Object {
              "type": "TIMER",
            },
            "state": Object {
              "_event": Object {
                "$$type": "scxml",
                "data": Object {
                  "type": "PED_COUNTDOWN",
                },
                "name": "PED_COUNTDOWN",
                "type": "external",
              },
              "_sessionid": null,
              "actions": Array [],
              "activities": Object {},
              "changed": false,
              "children": Object {},
              "context": undefined,
              "done": false,
              "event": Object {
                "type": "PED_COUNTDOWN",
              },
              "events": Array [],
              "history": Object {
                "_event": Object {
                  "$$type": "scxml",
                  "data": Object {
                    "type": "xstate.init",
                  },
                  "name": "xstate.init",
                  "type": "external",
                },
                "_sessionid": null,
                "actions": Array [],
                "activities": Object {},
                "changed": undefined,
                "children": Object {},
                "context": undefined,
                "done": false,
                "event": Object {
                  "type": "xstate.init",
                },
                "events": Array [],
                "historyValue": undefined,
                "matches": [Function],
                "meta": Object {},
                "tags": Array [],
                "toStrings": [Function],
                "value": "green",
              },
              "historyValue": undefined,
              "matches": [Function],
              "meta": Object {},
              "tags": Array [],
              "toStrings": [Function],
              "value": "green",
            },
          },
          Object {
            "event": Object {
              "type": "TIMER",
            },
            "state": Object {
              "_event": Object {
                "$$type": "scxml",
                "data": Object {
                  "type": "TIMER",
                },
                "name": "TIMER",
                "type": "external",
              },
              "_sessionid": null,
              "actions": Array [],
              "activities": Object {},
              "changed": true,
              "children": Object {},
              "context": undefined,
              "done": false,
              "event": Object {
                "type": "TIMER",
              },
              "events": Array [],
              "historyValue": Object {
                "current": "yellow",
                "states": Object {
                  "green": undefined,
                  "red": Object {
                    "current": "walk",
                    "states": Object {
                      "flashing": undefined,
                      "stop": undefined,
                      "wait": undefined,
                      "walk": undefined,
                    },
                  },
                  "yellow": undefined,
                },
              },
              "matches": [Function],
              "meta": Object {},
              "tags": Array [],
              "toStrings": [Function],
              "value": "yellow",
            },
          },
          Object {
            "event": Object {
              "type": "PED_COUNTDOWN",
            },
            "state": Object {
              "_event": Object {
                "$$type": "scxml",
                "data": Object {
                  "type": "PUSH_BUTTON",
                },
                "name": "PUSH_BUTTON",
                "type": "external",
              },
              "_sessionid": null,
              "actions": Array [],
              "activities": Object {},
              "changed": false,
              "children": Object {},
              "context": undefined,
              "done": false,
              "event": Object {
                "type": "PUSH_BUTTON",
              },
              "events": Array [],
              "history": Object {
                "_event": Object {
                  "$$type": "scxml",
                  "data": Object {
                    "type": "TIMER",
                  },
                  "name": "TIMER",
                  "type": "external",
                },
                "_sessionid": null,
                "actions": Array [],
                "activities": Object {},
                "changed": true,
                "children": Object {},
                "context": undefined,
                "done": false,
                "event": Object {
                  "type": "TIMER",
                },
                "events": Array [],
                "historyValue": Object {
                  "current": Object {
                    "red": "walk",
                  },
                  "states": Object {
                    "green": undefined,
                    "red": Object {
                      "current": "walk",
                      "states": Object {
                        "flashing": undefined,
                        "stop": undefined,
                        "wait": undefined,
                        "walk": undefined,
                      },
                    },
                    "yellow": undefined,
                  },
                },
                "matches": [Function],
                "meta": Object {},
                "tags": Array [],
                "toStrings": [Function],
                "value": Object {
                  "red": "walk",
                },
              },
              "historyValue": Object {
                "current": Object {
                  "red": "walk",
                },
                "states": Object {
                  "green": undefined,
                  "red": Object {
                    "current": "walk",
                    "states": Object {
                      "flashing": undefined,
                      "stop": undefined,
                      "wait": undefined,
                      "walk": undefined,
                    },
                  },
                  "yellow": undefined,
                },
              },
              "matches": [Function],
              "meta": Object {},
              "tags": Array [],
              "toStrings": [Function],
              "value": Object {
                "red": "walk",
              },
            },
          },
          Object {
            "event": Object {
              "type": "POWER_OUTAGE",
            },
            "state": Object {
              "_event": Object {
                "$$type": "scxml",
                "data": Object {
                  "type": "PED_COUNTDOWN",
                },
                "name": "PED_COUNTDOWN",
                "type": "external",
              },
              "_sessionid": null,
              "actions": Array [
                Object {
                  "exec": undefined,
                  "type": "startCountdown",
                },
              ],
              "activities": Object {},
              "changed": true,
              "children": Object {},
              "context": undefined,
              "done": false,
              "event": Object {
                "type": "PED_COUNTDOWN",
              },
              "events": Array [],
              "historyValue": Object {
                "current": Object {
                  "red": "wait",
                },
                "states": Object {
                  "green": undefined,
                  "red": Object {
                    "current": "wait",
                    "states": Object {
                      "flashing": undefined,
                      "stop": undefined,
                      "wait": undefined,
                      "walk": undefined,
                    },
                  },
                  "yellow": undefined,
                },
              },
              "matches": [Function],
              "meta": Object {},
              "tags": Array [],
              "toStrings": [Function],
              "value": Object {
                "red": "wait",
              },
            },
          },
        ],
        "weight": 4,
      },
      Object {
        "state": Object {
          "_event": Object {
            "$$type": "scxml",
            "data": Object {
              "type": "POWER_OUTAGE",
            },
            "name": "POWER_OUTAGE",
            "type": "external",
          },
          "_sessionid": null,
          "actions": Array [],
          "activities": Object {},
          "changed": true,
          "children": Object {},
          "context": undefined,
          "done": false,
          "event": Object {
            "type": "POWER_OUTAGE",
          },
          "events": Array [],
          "history": Object {
            "_event": Object {
              "$$type": "scxml",
              "data": Object {
                "type": "PED_COUNTDOWN",
              },
              "name": "PED_COUNTDOWN",
              "type": "external",
            },
            "_sessionid": null,
            "actions": Array [],
            "activities": Object {},
            "changed": true,
            "children": Object {},
            "context": undefined,
            "done": false,
            "event": Object {
              "type": "PED_COUNTDOWN",
            },
            "events": Array [],
            "historyValue": Object {
              "current": Object {
                "red": "stop",
              },
              "states": Object {
                "green": undefined,
                "red": Object {
                  "current": "stop",
                  "states": Object {
                    "flashing": undefined,
                    "stop": undefined,
                    "wait": undefined,
                    "walk": undefined,
                  },
                },
                "yellow": undefined,
              },
            },
            "matches": [Function],
            "meta": Object {},
            "tags": Array [],
            "toStrings": [Function],
            "value": Object {
              "red": "stop",
            },
          },
          "historyValue": Object {
            "current": Object {
              "red": "flashing",
            },
            "states": Object {
              "green": undefined,
              "red": Object {
                "current": "flashing",
                "states": Object {
                  "flashing": undefined,
                  "stop": undefined,
                  "wait": undefined,
                  "walk": undefined,
                },
              },
              "yellow": undefined,
            },
          },
          "matches": [Function],
          "meta": Object {},
          "tags": Array [],
          "toStrings": [Function],
          "value": Object {
            "red": "flashing",
          },
        },
        "steps": Array [
          Object {
            "event": Object {
              "type": "TIMER",
            },
            "state": Object {
              "_event": Object {
                "$$type": "scxml",
                "data": Object {
                  "type": "PED_COUNTDOWN",
                },
                "name": "PED_COUNTDOWN",
                "type": "external",
              },
              "_sessionid": null,
              "actions": Array [],
              "activities": Object {},
              "changed": false,
              "children": Object {},
              "context": undefined,
              "done": false,
              "event": Object {
                "type": "PED_COUNTDOWN",
              },
              "events": Array [],
              "history": Object {
                "_event": Object {
                  "$$type": "scxml",
                  "data": Object {
                    "type": "xstate.init",
                  },
                  "name": "xstate.init",
                  "type": "external",
                },
                "_sessionid": null,
                "actions": Array [],
                "activities": Object {},
                "changed": undefined,
                "children": Object {},
                "context": undefined,
                "done": false,
                "event": Object {
                  "type": "xstate.init",
                },
                "events": Array [],
                "historyValue": undefined,
                "matches": [Function],
                "meta": Object {},
                "tags": Array [],
                "toStrings": [Function],
                "value": "green",
              },
              "historyValue": undefined,
              "matches": [Function],
              "meta": Object {},
              "tags": Array [],
              "toStrings": [Function],
              "value": "green",
            },
          },
          Object {
            "event": Object {
              "type": "TIMER",
            },
            "state": Object {
              "_event": Object {
                "$$type": "scxml",
                "data": Object {
                  "type": "TIMER",
                },
                "name": "TIMER",
                "type": "external",
              },
              "_sessionid": null,
              "actions": Array [],
              "activities": Object {},
              "changed": true,
              "children": Object {},
              "context": undefined,
              "done": false,
              "event": Object {
                "type": "TIMER",
              },
              "events": Array [],
              "historyValue": Object {
                "current": "yellow",
                "states": Object {
                  "green": undefined,
                  "red": Object {
                    "current": "walk",
                    "states": Object {
                      "flashing": undefined,
                      "stop": undefined,
                      "wait": undefined,
                      "walk": undefined,
                    },
                  },
                  "yellow": undefined,
                },
              },
              "matches": [Function],
              "meta": Object {},
              "tags": Array [],
              "toStrings": [Function],
              "value": "yellow",
            },
          },
          Object {
            "event": Object {
              "type": "PED_COUNTDOWN",
            },
            "state": Object {
              "_event": Object {
                "$$type": "scxml",
                "data": Object {
                  "type": "PUSH_BUTTON",
                },
                "name": "PUSH_BUTTON",
                "type": "external",
              },
              "_sessionid": null,
              "actions": Array [],
              "activities": Object {},
              "changed": false,
              "children": Object {},
              "context": undefined,
              "done": false,
              "event": Object {
                "type": "PUSH_BUTTON",
              },
              "events": Array [],
              "history": Object {
                "_event": Object {
                  "$$type": "scxml",
                  "data": Object {
                    "type": "TIMER",
                  },
                  "name": "TIMER",
                  "type": "external",
                },
                "_sessionid": null,
                "actions": Array [],
                "activities": Object {},
                "changed": true,
                "children": Object {},
                "context": undefined,
                "done": false,
                "event": Object {
                  "type": "TIMER",
                },
                "events": Array [],
                "historyValue": Object {
                  "current": Object {
                    "red": "walk",
                  },
                  "states": Object {
                    "green": undefined,
                    "red": Object {
                      "current": "walk",
                      "states": Object {
                        "flashing": undefined,
                        "stop": undefined,
                        "wait": undefined,
                        "walk": undefined,
                      },
                    },
                    "yellow": undefined,
                  },
                },
                "matches": [Function],
                "meta": Object {},
                "tags": Array [],
                "toStrings": [Function],
                "value": Object {
                  "red": "walk",
                },
              },
              "historyValue": Object {
                "current": Object {
                  "red": "walk",
                },
                "states": Object {
                  "green": undefined,
                  "red": Object {
                    "current": "walk",
                    "states": Object {
                      "flashing": undefined,
                      "stop": undefined,
                      "wait": undefined,
                      "walk": undefined,
                    },
                  },
                  "yellow": undefined,
                },
              },
              "matches": [Function],
              "meta": Object {},
              "tags": Array [],
              "toStrings": [Function],
              "value": Object {
                "red": "walk",
              },
            },
          },
          Object {
            "event": Object {
              "type": "PED_COUNTDOWN",
            },
            "state": Object {
              "_event": Object {
                "$$type": "scxml",
                "data": Object {
                  "type": "PUSH_BUTTON",
                },
                "name": "PUSH_BUTTON",
                "type": "external",
              },
              "_sessionid": null,
              "actions": Array [],
              "activities": Object {},
              "changed": false,
              "children": Object {},
              "context": undefined,
              "done": false,
              "event": Object {
                "type": "PUSH_BUTTON",
              },
              "events": Array [],
              "history": Object {
                "_event": Object {
                  "$$type": "scxml",
                  "data": Object {
                    "type": "PED_COUNTDOWN",
                  },
                  "name": "PED_COUNTDOWN",
                  "type": "external",
                },
                "_sessionid": null,
                "actions": Array [
                  Object {
                    "exec": undefined,
                    "type": "startCountdown",
                  },
                ],
                "activities": Object {},
                "changed": true,
                "children": Object {},
                "context": undefined,
                "done": false,
                "event": Object {
                  "type": "PED_COUNTDOWN",
                },
                "events": Array [],
                "historyValue": Object {
                  "current": Object {
                    "red": "wait",
                  },
                  "states": Object {
                    "green": undefined,
                    "red": Object {
                      "current": "wait",
                      "states": Object {
                        "flashing": undefined,
                        "stop": undefined,
                        "wait": undefined,
                        "walk": undefined,
                      },
                    },
                    "yellow": undefined,
                  },
                },
                "matches": [Function],
                "meta": Object {},
                "tags": Array [],
                "toStrings": [Function],
                "value": Object {
                  "red": "wait",
                },
              },
              "historyValue": Object {
                "current": Object {
                  "red": "wait",
                },
                "states": Object {
                  "green": undefined,
                  "red": Object {
                    "current": "wait",
                    "states": Object {
                      "flashing": undefined,
                      "stop": undefined,
                      "wait": undefined,
                      "walk": undefined,
                    },
                  },
                  "yellow": undefined,
                },
              },
              "matches": [Function],
              "meta": Object {},
              "tags": Array [],
              "toStrings": [Function],
              "value": Object {
                "red": "wait",
              },
            },
          },
          Object {
            "event": Object {
              "type": "POWER_OUTAGE",
            },
            "state": Object {
              "_event": Object {
                "$$type": "scxml",
                "data": Object {
                  "type": "PED_COUNTDOWN",
                },
                "name": "PED_COUNTDOWN",
                "type": "external",
              },
              "_sessionid": null,
              "actions": Array [],
              "activities": Object {},
              "changed": true,
              "children": Object {},
              "context": undefined,
              "done": false,
              "event": Object {
                "type": "PED_COUNTDOWN",
              },
              "events": Array [],
              "historyValue": Object {
                "current": Object {
                  "red": "stop",
                },
                "states": Object {
                  "green": undefined,
                  "red": Object {
                    "current": "stop",
                    "states": Object {
                      "flashing": undefined,
                      "stop": undefined,
                      "wait": undefined,
                      "walk": undefined,
                    },
                  },
                  "yellow": undefined,
                },
              },
              "matches": [Function],
              "meta": Object {},
              "tags": Array [],
              "toStrings": [Function],
              "value": Object {
                "red": "stop",
              },
            },
          },
        ],
        "weight": 5,
      },
      Object {
        "state": Object {
          "_event": Object {
            "$$type": "scxml",
            "data": Object {
              "type": "POWER_OUTAGE",
            },
            "name": "POWER_OUTAGE",
            "type": "external",
          },
          "_sessionid": null,
          "actions": Array [],
          "activities": Object {},
          "changed": true,
          "children": Object {},
          "context": undefined,
          "done": false,
          "event": Object {
            "type": "POWER_OUTAGE",
          },
          "events": Array [],
          "history": Object {
            "_event": Object {
              "$$type": "scxml",
              "data": Object {
                "type": "TIMER",
              },
              "name": "TIMER",
              "type": "external",
            },
            "_sessionid": null,
            "actions": Array [],
            "activities": Object {},
            "changed": true,
            "children": Object {},
            "context": undefined,
            "done": false,
            "event": Object {
              "type": "TIMER",
            },
            "events": Array [],
            "historyValue": Object {
              "current": "yellow",
              "states": Object {
                "green": undefined,
                "red": Object {
                  "current": "walk",
                  "states": Object {
                    "flashing": undefined,
                    "stop": undefined,
                    "wait": undefined,
                    "walk": undefined,
                  },
                },
                "yellow": undefined,
              },
            },
            "matches": [Function],
            "meta": Object {},
            "tags": Array [],
            "toStrings": [Function],
            "value": "yellow",
          },
          "historyValue": Object {
            "current": Object {
              "red": "flashing",
            },
            "states": Object {
              "green": undefined,
              "red": Object {
                "current": "flashing",
                "states": Object {
                  "flashing": undefined,
                  "stop": undefined,
                  "wait": undefined,
                  "walk": undefined,
                },
              },
              "yellow": undefined,
            },
          },
          "matches": [Function],
          "meta": Object {},
          "tags": Array [],
          "toStrings": [Function],
          "value": Object {
            "red": "flashing",
          },
        },
        "steps": Array [
          Object {
            "event": Object {
              "type": "TIMER",
            },
            "state": Object {
              "_event": Object {
                "$$type": "scxml",
                "data": Object {
                  "type": "PED_COUNTDOWN",
                },
                "name": "PED_COUNTDOWN",
                "type": "external",
              },
              "_sessionid": null,
              "actions": Array [],
              "activities": Object {},
              "changed": false,
              "children": Object {},
              "context": undefined,
              "done": false,
              "event": Object {
                "type": "PED_COUNTDOWN",
              },
              "events": Array [],
              "history": Object {
                "_event": Object {
                  "$$type": "scxml",
                  "data": Object {
                    "type": "xstate.init",
                  },
                  "name": "xstate.init",
                  "type": "external",
                },
                "_sessionid": null,
                "actions": Array [],
                "activities": Object {},
                "changed": undefined,
                "children": Object {},
                "context": undefined,
                "done": false,
                "event": Object {
                  "type": "xstate.init",
                },
                "events": Array [],
                "historyValue": undefined,
                "matches": [Function],
                "meta": Object {},
                "tags": Array [],
                "toStrings": [Function],
                "value": "green",
              },
              "historyValue": undefined,
              "matches": [Function],
              "meta": Object {},
              "tags": Array [],
              "toStrings": [Function],
              "value": "green",
            },
          },
          Object {
            "event": Object {
              "type": "POWER_OUTAGE",
            },
            "state": Object {
              "_event": Object {
                "$$type": "scxml",
                "data": Object {
                  "type": "TIMER",
                },
                "name": "TIMER",
                "type": "external",
              },
              "_sessionid": null,
              "actions": Array [],
              "activities": Object {},
              "changed": true,
              "children": Object {},
              "context": undefined,
              "done": false,
              "event": Object {
                "type": "TIMER",
              },
              "events": Array [],
              "historyValue": Object {
                "current": "yellow",
                "states": Object {
                  "green": undefined,
                  "red": Object {
                    "current": "walk",
                    "states": Object {
                      "flashing": undefined,
                      "stop": undefined,
                      "wait": undefined,
                      "walk": undefined,
                    },
                  },
                  "yellow": undefined,
                },
              },
              "matches": [Function],
              "meta": Object {},
              "tags": Array [],
              "toStrings": [Function],
              "value": "yellow",
            },
          },
        ],
        "weight": 2,
      },
      Object {
        "state": Object {
          "_event": Object {
            "$$type": "scxml",
            "data": Object {
              "type": "POWER_OUTAGE",
            },
            "name": "POWER_OUTAGE",
            "type": "external",
          },
          "_sessionid": null,
          "actions": Array [],
          "activities": Object {},
          "changed": true,
          "children": Object {},
          "context": undefined,
          "done": false,
          "event": Object {
            "type": "POWER_OUTAGE",
          },
          "events": Array [],
          "history": Object {
            "_event": Object {
              "$$type": "scxml",
              "data": Object {
                "type": "xstate.init",
              },
              "name": "xstate.init",
              "type": "external",
            },
            "_sessionid": null,
            "actions": Array [],
            "activities": Object {},
            "changed": undefined,
            "children": Object {},
            "context": undefined,
            "done": false,
            "event": Object {
              "type": "xstate.init",
            },
            "events": Array [],
            "historyValue": undefined,
            "matches": [Function],
            "meta": Object {},
            "tags": Array [],
            "toStrings": [Function],
            "value": "green",
          },
          "historyValue": Object {
            "current": Object {
              "red": "flashing",
            },
            "states": Object {
              "green": undefined,
              "red": Object {
                "current": "flashing",
                "states": Object {
                  "flashing": undefined,
                  "stop": undefined,
                  "wait": undefined,
                  "walk": undefined,
                },
              },
              "yellow": undefined,
            },
          },
          "matches": [Function],
          "meta": Object {},
          "tags": Array [],
          "toStrings": [Function],
          "value": Object {
            "red": "flashing",
          },
        },
        "steps": Array [
          Object {
            "event": Object {
              "type": "POWER_OUTAGE",
            },
            "state": Object {
              "_event": Object {
                "$$type": "scxml",
                "data": Object {
                  "type": "TIMER",
                },
                "name": "TIMER",
                "type": "external",
              },
              "_sessionid": null,
              "actions": Array [],
              "activities": Object {},
              "changed": true,
              "children": Object {},
              "context": undefined,
              "done": false,
              "event": Object {
                "type": "TIMER",
              },
              "events": Array [],
              "history": Object {
                "_event": Object {
                  "$$type": "scxml",
                  "data": Object {
                    "type": "PED_COUNTDOWN",
                  },
                  "name": "PED_COUNTDOWN",
                  "type": "external",
                },
                "_sessionid": null,
                "actions": Array [],
                "activities": Object {},
                "changed": true,
                "children": Object {},
                "context": undefined,
                "done": false,
                "event": Object {
                  "type": "PED_COUNTDOWN",
                },
                "events": Array [],
                "historyValue": Object {
                  "current": Object {
                    "red": "stop",
                  },
                  "states": Object {
                    "green": undefined,
                    "red": Object {
                      "current": "stop",
                      "states": Object {
                        "flashing": undefined,
                        "stop": undefined,
                        "wait": undefined,
                        "walk": undefined,
                      },
                    },
                    "yellow": undefined,
                  },
                },
                "matches": [Function],
                "meta": Object {},
                "tags": Array [],
                "toStrings": [Function],
                "value": Object {
                  "red": "stop",
                },
              },
              "historyValue": Object {
                "current": "green",
                "states": Object {
                  "green": undefined,
                  "red": Object {
                    "current": "stop",
                    "states": Object {
                      "flashing": undefined,
                      "stop": undefined,
                      "wait": undefined,
                      "walk": undefined,
                    },
                  },
                  "yellow": undefined,
                },
              },
              "matches": [Function],
              "meta": Object {},
              "tags": Array [],
              "toStrings": [Function],
              "value": "green",
            },
          },
        ],
        "weight": 1,
      },
    ],
    "state": Object {
      "_event": Object {
        "$$type": "scxml",
        "data": Object {
          "type": "POWER_OUTAGE",
        },
        "name": "POWER_OUTAGE",
        "type": "external",
      },
      "_sessionid": null,
      "actions": Array [],
      "activities": Object {},
      "changed": true,
      "children": Object {},
      "context": undefined,
      "done": false,
      "event": Object {
        "type": "POWER_OUTAGE",
      },
      "events": Array [],
      "historyValue": Object {
        "current": Object {
          "red": "flashing",
        },
        "states": Object {
          "green": undefined,
          "red": Object {
            "current": "flashing",
            "states": Object {
              "flashing": undefined,
              "stop": undefined,
              "wait": undefined,
              "walk": undefined,
            },
          },
          "yellow": undefined,
        },
      },
      "matches": [Function],
      "meta": Object {},
      "tags": Array [],
      "toStrings": [Function],
      "value": Object {
        "red": "flashing",
      },
    },
  },
  Object {
    "paths": Array [
      Object {
        "state": Object {
          "_event": Object {
            "$$type": "scxml",
            "data": Object {
              "type": "PED_COUNTDOWN",
            },
            "name": "PED_COUNTDOWN",
            "type": "external",
          },
          "_sessionid": null,
          "actions": Array [
            Object {
              "exec": undefined,
              "type": "startCountdown",
            },
          ],
          "activities": Object {},
          "changed": true,
          "children": Object {},
          "context": undefined,
          "done": false,
          "event": Object {
            "type": "PED_COUNTDOWN",
          },
          "events": Array [],
          "historyValue": Object {
            "current": Object {
              "red": "wait",
            },
            "states": Object {
              "green": undefined,
              "red": Object {
                "current": "wait",
                "states": Object {
                  "flashing": undefined,
                  "stop": undefined,
                  "wait": undefined,
                  "walk": undefined,
                },
              },
              "yellow": undefined,
            },
          },
          "matches": [Function],
          "meta": Object {},
          "tags": Array [],
          "toStrings": [Function],
          "value": Object {
            "red": "wait",
          },
        },
        "steps": Array [
          Object {
            "event": Object {
              "type": "TIMER",
            },
            "state": Object {
              "_event": Object {
                "$$type": "scxml",
                "data": Object {
                  "type": "PED_COUNTDOWN",
                },
                "name": "PED_COUNTDOWN",
                "type": "external",
              },
              "_sessionid": null,
              "actions": Array [],
              "activities": Object {},
              "changed": false,
              "children": Object {},
              "context": undefined,
              "done": false,
              "event": Object {
                "type": "PED_COUNTDOWN",
              },
              "events": Array [],
              "history": Object {
                "_event": Object {
                  "$$type": "scxml",
                  "data": Object {
                    "type": "xstate.init",
                  },
                  "name": "xstate.init",
                  "type": "external",
                },
                "_sessionid": null,
                "actions": Array [],
                "activities": Object {},
                "changed": undefined,
                "children": Object {},
                "context": undefined,
                "done": false,
                "event": Object {
                  "type": "xstate.init",
                },
                "events": Array [],
                "historyValue": undefined,
                "matches": [Function],
                "meta": Object {},
                "tags": Array [],
                "toStrings": [Function],
                "value": "green",
              },
              "historyValue": undefined,
              "matches": [Function],
              "meta": Object {},
              "tags": Array [],
              "toStrings": [Function],
              "value": "green",
            },
          },
          Object {
            "event": Object {
              "type": "TIMER",
            },
            "state": Object {
              "_event": Object {
                "$$type": "scxml",
                "data": Object {
                  "type": "TIMER",
                },
                "name": "TIMER",
                "type": "external",
              },
              "_sessionid": null,
              "actions": Array [],
              "activities": Object {},
              "changed": true,
              "children": Object {},
              "context": undefined,
              "done": false,
              "event": Object {
                "type": "TIMER",
              },
              "events": Array [],
              "historyValue": Object {
                "current": "yellow",
                "states": Object {
                  "green": undefined,
                  "red": Object {
                    "current": "walk",
                    "states": Object {
                      "flashing": undefined,
                      "stop": undefined,
                      "wait": undefined,
                      "walk": undefined,
                    },
                  },
                  "yellow": undefined,
                },
              },
              "matches": [Function],
              "meta": Object {},
              "tags": Array [],
              "toStrings": [Function],
              "value": "yellow",
            },
          },
          Object {
            "event": Object {
              "type": "PED_COUNTDOWN",
            },
            "state": Object {
              "_event": Object {
                "$$type": "scxml",
                "data": Object {
                  "type": "PUSH_BUTTON",
                },
                "name": "PUSH_BUTTON",
                "type": "external",
              },
              "_sessionid": null,
              "actions": Array [],
              "activities": Object {},
              "changed": false,
              "children": Object {},
              "context": undefined,
              "done": false,
              "event": Object {
                "type": "PUSH_BUTTON",
              },
              "events": Array [],
              "history": Object {
                "_event": Object {
                  "$$type": "scxml",
                  "data": Object {
                    "type": "TIMER",
                  },
                  "name": "TIMER",
                  "type": "external",
                },
                "_sessionid": null,
                "actions": Array [],
                "activities": Object {},
                "changed": true,
                "children": Object {},
                "context": undefined,
                "done": false,
                "event": Object {
                  "type": "TIMER",
                },
                "events": Array [],
                "historyValue": Object {
                  "current": Object {
                    "red": "walk",
                  },
                  "states": Object {
                    "green": undefined,
                    "red": Object {
                      "current": "walk",
                      "states": Object {
                        "flashing": undefined,
                        "stop": undefined,
                        "wait": undefined,
                        "walk": undefined,
                      },
                    },
                    "yellow": undefined,
                  },
                },
                "matches": [Function],
                "meta": Object {},
                "tags": Array [],
                "toStrings": [Function],
                "value": Object {
                  "red": "walk",
                },
              },
              "historyValue": Object {
                "current": Object {
                  "red": "walk",
                },
                "states": Object {
                  "green": undefined,
                  "red": Object {
                    "current": "walk",
                    "states": Object {
                      "flashing": undefined,
                      "stop": undefined,
                      "wait": undefined,
                      "walk": undefined,
                    },
                  },
                  "yellow": undefined,
                },
              },
              "matches": [Function],
              "meta": Object {},
              "tags": Array [],
              "toStrings": [Function],
              "value": Object {
                "red": "walk",
              },
            },
          },
        ],
        "weight": 3,
      },
    ],
    "state": Object {
      "_event": Object {
        "$$type": "scxml",
        "data": Object {
          "type": "PED_COUNTDOWN",
        },
        "name": "PED_COUNTDOWN",
        "type": "external",
      },
      "_sessionid": null,
      "actions": Array [
        Object {
          "exec": undefined,
          "type": "startCountdown",
        },
      ],
      "activities": Object {},
      "changed": true,
      "children": Object {},
      "context": undefined,
      "done": false,
      "event": Object {
        "type": "PED_COUNTDOWN",
      },
      "events": Array [],
      "historyValue": Object {
        "current": Object {
          "red": "wait",
        },
        "states": Object {
          "green": undefined,
          "red": Object {
            "current": "wait",
            "states": Object {
              "flashing": undefined,
              "stop": undefined,
              "wait": undefined,
              "walk": undefined,
            },
          },
          "yellow": undefined,
        },
      },
      "matches": [Function],
      "meta": Object {},
      "tags": Array [],
      "toStrings": [Function],
      "value": Object {
        "red": "wait",
      },
    },
  },
  Object {
    "paths": Array [
      Object {
        "state": Object {
          "_event": Object {
            "$$type": "scxml",
            "data": Object {
              "type": "PED_COUNTDOWN",
            },
            "name": "PED_COUNTDOWN",
            "type": "external",
          },
          "_sessionid": null,
          "actions": Array [],
          "activities": Object {},
          "changed": true,
          "children": Object {},
          "context": undefined,
          "done": false,
          "event": Object {
            "type": "PED_COUNTDOWN",
          },
          "events": Array [],
          "historyValue": Object {
            "current": Object {
              "red": "stop",
            },
            "states": Object {
              "green": undefined,
              "red": Object {
                "current": "stop",
                "states": Object {
                  "flashing": undefined,
                  "stop": undefined,
                  "wait": undefined,
                  "walk": undefined,
                },
              },
              "yellow": undefined,
            },
          },
          "matches": [Function],
          "meta": Object {},
          "tags": Array [],
          "toStrings": [Function],
          "value": Object {
            "red": "stop",
          },
        },
        "steps": Array [
          Object {
            "event": Object {
              "type": "TIMER",
            },
            "state": Object {
              "_event": Object {
                "$$type": "scxml",
                "data": Object {
                  "type": "PED_COUNTDOWN",
                },
                "name": "PED_COUNTDOWN",
                "type": "external",
              },
              "_sessionid": null,
              "actions": Array [],
              "activities": Object {},
              "changed": false,
              "children": Object {},
              "context": undefined,
              "done": false,
              "event": Object {
                "type": "PED_COUNTDOWN",
              },
              "events": Array [],
              "history": Object {
                "_event": Object {
                  "$$type": "scxml",
                  "data": Object {
                    "type": "xstate.init",
                  },
                  "name": "xstate.init",
                  "type": "external",
                },
                "_sessionid": null,
                "actions": Array [],
                "activities": Object {},
                "changed": undefined,
                "children": Object {},
                "context": undefined,
                "done": false,
                "event": Object {
                  "type": "xstate.init",
                },
                "events": Array [],
                "historyValue": undefined,
                "matches": [Function],
                "meta": Object {},
                "tags": Array [],
                "toStrings": [Function],
                "value": "green",
              },
              "historyValue": undefined,
              "matches": [Function],
              "meta": Object {},
              "tags": Array [],
              "toStrings": [Function],
              "value": "green",
            },
          },
          Object {
            "event": Object {
              "type": "TIMER",
            },
            "state": Object {
              "_event": Object {
                "$$type": "scxml",
                "data": Object {
                  "type": "TIMER",
                },
                "name": "TIMER",
                "type": "external",
              },
              "_sessionid": null,
              "actions": Array [],
              "activities": Object {},
              "changed": true,
              "children": Object {},
              "context": undefined,
              "done": false,
              "event": Object {
                "type": "TIMER",
              },
              "events": Array [],
              "historyValue": Object {
                "current": "yellow",
                "states": Object {
                  "green": undefined,
                  "red": Object {
                    "current": "walk",
                    "states": Object {
                      "flashing": undefined,
                      "stop": undefined,
                      "wait": undefined,
                      "walk": undefined,
                    },
                  },
                  "yellow": undefined,
                },
              },
              "matches": [Function],
              "meta": Object {},
              "tags": Array [],
              "toStrings": [Function],
              "value": "yellow",
            },
          },
          Object {
            "event": Object {
              "type": "PED_COUNTDOWN",
            },
            "state": Object {
              "_event": Object {
                "$$type": "scxml",
                "data": Object {
                  "type": "PUSH_BUTTON",
                },
                "name": "PUSH_BUTTON",
                "type": "external",
              },
              "_sessionid": null,
              "actions": Array [],
              "activities": Object {},
              "changed": false,
              "children": Object {},
              "context": undefined,
              "done": false,
              "event": Object {
                "type": "PUSH_BUTTON",
              },
              "events": Array [],
              "history": Object {
                "_event": Object {
                  "$$type": "scxml",
                  "data": Object {
                    "type": "TIMER",
                  },
                  "name": "TIMER",
                  "type": "external",
                },
                "_sessionid": null,
                "actions": Array [],
                "activities": Object {},
                "changed": true,
                "children": Object {},
                "context": undefined,
                "done": false,
                "event": Object {
                  "type": "TIMER",
                },
                "events": Array [],
                "historyValue": Object {
                  "current": Object {
                    "red": "walk",
                  },
                  "states": Object {
                    "green": undefined,
                    "red": Object {
                      "current": "walk",
                      "states": Object {
                        "flashing": undefined,
                        "stop": undefined,
                        "wait": undefined,
                        "walk": undefined,
                      },
                    },
                    "yellow": undefined,
                  },
                },
                "matches": [Function],
                "meta": Object {},
                "tags": Array [],
                "toStrings": [Function],
                "value": Object {
                  "red": "walk",
                },
              },
              "historyValue": Object {
                "current": Object {
                  "red": "walk",
                },
                "states": Object {
                  "green": undefined,
                  "red": Object {
                    "current": "walk",
                    "states": Object {
                      "flashing": undefined,
                      "stop": undefined,
                      "wait": undefined,
                      "walk": undefined,
                    },
                  },
                  "yellow": undefined,
                },
              },
              "matches": [Function],
              "meta": Object {},
              "tags": Array [],
              "toStrings": [Function],
              "value": Object {
                "red": "walk",
              },
            },
          },
          Object {
            "event": Object {
              "type": "PED_COUNTDOWN",
            },
            "state": Object {
              "_event": Object {
                "$$type": "scxml",
                "data": Object {
                  "type": "PUSH_BUTTON",
                },
                "name": "PUSH_BUTTON",
                "type": "external",
              },
              "_sessionid": null,
              "actions": Array [],
              "activities": Object {},
              "changed": false,
              "children": Object {},
              "context": undefined,
              "done": false,
              "event": Object {
                "type": "PUSH_BUTTON",
              },
              "events": Array [],
              "history": Object {
                "_event": Object {
                  "$$type": "scxml",
                  "data": Object {
                    "type": "PED_COUNTDOWN",
                  },
                  "name": "PED_COUNTDOWN",
                  "type": "external",
                },
                "_sessionid": null,
                "actions": Array [
                  Object {
                    "exec": undefined,
                    "type": "startCountdown",
                  },
                ],
                "activities": Object {},
                "changed": true,
                "children": Object {},
                "context": undefined,
                "done": false,
                "event": Object {
                  "type": "PED_COUNTDOWN",
                },
                "events": Array [],
                "historyValue": Object {
                  "current": Object {
                    "red": "wait",
                  },
                  "states": Object {
                    "green": undefined,
                    "red": Object {
                      "current": "wait",
                      "states": Object {
                        "flashing": undefined,
                        "stop": undefined,
                        "wait": undefined,
                        "walk": undefined,
                      },
                    },
                    "yellow": undefined,
                  },
                },
                "matches": [Function],
                "meta": Object {},
                "tags": Array [],
                "toStrings": [Function],
                "value": Object {
                  "red": "wait",
                },
              },
              "historyValue": Object {
                "current": Object {
                  "red": "wait",
                },
                "states": Object {
                  "green": undefined,
                  "red": Object {
                    "current": "wait",
                    "states": Object {
                      "flashing": undefined,
                      "stop": undefined,
                      "wait": undefined,
                      "walk": undefined,
                    },
                  },
                  "yellow": undefined,
                },
              },
              "matches": [Function],
              "meta": Object {},
              "tags": Array [],
              "toStrings": [Function],
              "value": Object {
                "red": "wait",
              },
            },
          },
        ],
        "weight": 4,
      },
    ],
    "state": Object {
      "_event": Object {
        "$$type": "scxml",
        "data": Object {
          "type": "PED_COUNTDOWN",
        },
        "name": "PED_COUNTDOWN",
        "type": "external",
      },
      "_sessionid": null,
      "actions": Array [],
      "activities": Object {},
      "changed": true,
      "children": Object {},
      "context": undefined,
      "done": false,
      "event": Object {
        "type": "PED_COUNTDOWN",
      },
      "events": Array [],
      "historyValue": Object {
        "current": Object {
          "red": "stop",
        },
        "states": Object {
          "green": undefined,
          "red": Object {
            "current": "stop",
            "states": Object {
              "flashing": undefined,
              "stop": undefined,
              "wait": undefined,
              "walk": undefined,
            },
          },
          "yellow": undefined,
        },
      },
      "matches": [Function],
      "meta": Object {},
      "tags": Array [],
      "toStrings": [Function],
      "value": Object {
        "red": "stop",
      },
    },
  },
]
`;

exports[`@xstate/graph toDirectedGraph should represent a statechart as a directed graph 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "edges": Array [
        Object {
          "label": Object {
            "text": "TIMER",
          },
          "source": "light.green",
          "target": "light.yellow",
        },
      ],
      "id": "light.green",
    },
    Object {
      "children": Array [],
      "edges": Array [
        Object {
          "label": Object {
            "text": "TIMER",
          },
          "source": "light.yellow",
          "target": "light.red",
        },
      ],
      "id": "light.yellow",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "edges": Array [
            Object {
              "label": Object {
                "text": "COUNTDOWN",
              },
              "source": "light.red.walk",
              "target": "light.red.wait",
            },
          ],
          "id": "light.red.walk",
        },
        Object {
          "children": Array [],
          "edges": Array [
            Object {
              "label": Object {
                "text": "COUNTDOWN",
              },
              "source": "light.red.wait",
              "target": "light.red.stop",
            },
          ],
          "id": "light.red.wait",
        },
        Object {
          "children": Array [],
          "edges": Array [
            Object {
              "label": Object {
                "text": "COUNTDOWN",
              },
              "source": "light.red.stop",
              "target": "light.red.finished",
            },
          ],
          "id": "light.red.stop",
        },
        Object {
          "children": Array [],
          "edges": Array [],
          "id": "light.red.finished",
        },
      ],
      "edges": Array [
        Object {
          "label": Object {
            "text": "done.state.light.red",
          },
          "source": "light.red",
          "target": "light.green",
        },
      ],
      "id": "light.red",
    },
  ],
  "edges": Array [],
  "id": "light",
}
`;

exports[`shortest paths for reducers 1`] = `
Object {
  "0 | null": Array [
    Object {
      "state": 0,
      "steps": Array [],
    },
  ],
  "0 | {\\"type\\":\\"b\\"}": Array [
    Object {
      "state": 0,
      "steps": Array [
        Object {
          "state": 0,
          "type": "b",
        },
      ],
    },
  ],
  "0 | {\\"type\\":\\"reset\\"}": Array [
    Object {
      "state": 0,
      "steps": Array [
        Object {
          "state": 0,
          "type": "reset",
        },
      ],
    },
  ],
  "1 | {\\"type\\":\\"a\\"}": Array [
    Object {
      "state": 1,
      "steps": Array [
        Object {
          "state": 0,
          "type": "a",
        },
      ],
    },
  ],
  "2 | {\\"type\\":\\"b\\"}": Array [
    Object {
      "state": 2,
      "steps": Array [
        Object {
          "state": 0,
          "type": "a",
        },
        Object {
          "state": 1,
          "type": "b",
        },
      ],
    },
  ],
}
`;

exports[`simple paths for reducers 1`] = `
Object {
  "0 | null": Array [
    Object {
      "state": 0,
      "steps": Array [],
    },
  ],
  "0 | {\\"type\\":\\"b\\"}": Array [
    Object {
      "state": 0,
      "steps": Array [
        Object {
          "state": 0,
          "type": "a",
        },
        Object {
          "state": 1,
          "type": "b",
        },
        Object {
          "state": 2,
          "type": "reset",
        },
        Object {
          "state": 0,
          "type": "b",
        },
      ],
    },
    Object {
      "state": 0,
      "steps": Array [
        Object {
          "state": 0,
          "type": "a",
        },
        Object {
          "state": 1,
          "type": "reset",
        },
        Object {
          "state": 0,
          "type": "b",
        },
      ],
    },
    Object {
      "state": 0,
      "steps": Array [
        Object {
          "state": 0,
          "type": "b",
        },
      ],
    },
    Object {
      "state": 0,
      "steps": Array [
        Object {
          "state": 0,
          "type": "reset",
        },
        Object {
          "state": 0,
          "type": "b",
        },
      ],
    },
  ],
  "0 | {\\"type\\":\\"reset\\"}": Array [
    Object {
      "state": 0,
      "steps": Array [
        Object {
          "state": 0,
          "type": "a",
        },
        Object {
          "state": 1,
          "type": "b",
        },
        Object {
          "state": 2,
          "type": "reset",
        },
      ],
    },
    Object {
      "state": 0,
      "steps": Array [
        Object {
          "state": 0,
          "type": "a",
        },
        Object {
          "state": 1,
          "type": "reset",
        },
      ],
    },
    Object {
      "state": 0,
      "steps": Array [
        Object {
          "state": 0,
          "type": "b",
        },
        Object {
          "state": 0,
          "type": "a",
        },
        Object {
          "state": 1,
          "type": "b",
        },
        Object {
          "state": 2,
          "type": "reset",
        },
      ],
    },
    Object {
      "state": 0,
      "steps": Array [
        Object {
          "state": 0,
          "type": "b",
        },
        Object {
          "state": 0,
          "type": "a",
        },
        Object {
          "state": 1,
          "type": "reset",
        },
      ],
    },
    Object {
      "state": 0,
      "steps": Array [
        Object {
          "state": 0,
          "type": "b",
        },
        Object {
          "state": 0,
          "type": "reset",
        },
      ],
    },
    Object {
      "state": 0,
      "steps": Array [
        Object {
          "state": 0,
          "type": "reset",
        },
      ],
    },
  ],
  "1 | {\\"type\\":\\"a\\"}": Array [
    Object {
      "state": 1,
      "steps": Array [
        Object {
          "state": 0,
          "type": "a",
        },
      ],
    },
    Object {
      "state": 1,
      "steps": Array [
        Object {
          "state": 0,
          "type": "b",
        },
        Object {
          "state": 0,
          "type": "a",
        },
      ],
    },
    Object {
      "state": 1,
      "steps": Array [
        Object {
          "state": 0,
          "type": "b",
        },
        Object {
          "state": 0,
          "type": "reset",
        },
        Object {
          "state": 0,
          "type": "a",
        },
      ],
    },
    Object {
      "state": 1,
      "steps": Array [
        Object {
          "state": 0,
          "type": "reset",
        },
        Object {
          "state": 0,
          "type": "a",
        },
      ],
    },
    Object {
      "state": 1,
      "steps": Array [
        Object {
          "state": 0,
          "type": "reset",
        },
        Object {
          "state": 0,
          "type": "b",
        },
        Object {
          "state": 0,
          "type": "a",
        },
      ],
    },
  ],
  "2 | {\\"type\\":\\"b\\"}": Array [
    Object {
      "state": 2,
      "steps": Array [
        Object {
          "state": 0,
          "type": "a",
        },
        Object {
          "state": 1,
          "type": "b",
        },
      ],
    },
    Object {
      "state": 2,
      "steps": Array [
        Object {
          "state": 0,
          "type": "b",
        },
        Object {
          "state": 0,
          "type": "a",
        },
        Object {
          "state": 1,
          "type": "b",
        },
      ],
    },
    Object {
      "state": 2,
      "steps": Array [
        Object {
          "state": 0,
          "type": "b",
        },
        Object {
          "state": 0,
          "type": "reset",
        },
        Object {
          "state": 0,
          "type": "a",
        },
        Object {
          "state": 1,
          "type": "b",
        },
      ],
    },
    Object {
      "state": 2,
      "steps": Array [
        Object {
          "state": 0,
          "type": "reset",
        },
        Object {
          "state": 0,
          "type": "a",
        },
        Object {
          "state": 1,
          "type": "b",
        },
      ],
    },
    Object {
      "state": 2,
      "steps": Array [
        Object {
          "state": 0,
          "type": "reset",
        },
        Object {
          "state": 0,
          "type": "b",
        },
        Object {
          "state": 0,
          "type": "a",
        },
        Object {
          "state": 1,
          "type": "b",
        },
      ],
    },
  ],
}
`;
